--- a/loja.html
+++ b/loja.html
@@ -31,7 +31,7 @@
   
   
 
-<meta name="theme-color" content="#ff3366">
+<meta name="theme-color" content="#000000">
 <link rel="manifest" href="manifest.json">
 <script src="sw-connect.js"></script>
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -165,7 +165,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ogo78h+l7GL9VLPllL0OkMIgya1qq/UODCkiXdtwwKgzvZFoPXsdz9yNrq6y3fDjlqg+0GQUJGn6sprWrknbK8xxiczrmuYih+bH3FYRQmIQX85MWd7RKkaTZYe32Bku.TFRQY3Ry85eAU53fr70D/sat1Oyvcit+J45cAy2Ki7IknoiLnN/IN0du5hiRXuS3oz/o/qF9Ing0ohI2t5ypZeJtwjF9Vnqa//Os+PE4PhKKz4C24sb+n1ZWLwsQmQGk">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5jSuNg9hdWqF0MqMcNneSA/31vYObBMVBeEWuz8kfPcCwbgfGDtEr4A+7opznOt5EQcW9S1uf4mdkpBRARtxCy2XX6+b86Oi3Qq2gGNejQhqr3puCoFnUsT0gttdHo2H.U/lKj10SQapmxMteqQ6Ytun08eSe8kuV7paU0nbp8/rtZv90y3y4GkMa6ltSDXiCEE05z7KdC0nE+wty55fA8LMYQwL/LNZ0w6bmuydFd4ESyCbQOB0cUtof342XN6N9">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, iremos responder o mais rápido possível!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
