--- a/kitdofa.html
+++ b/kitdofa.html
@@ -28,7 +28,7 @@
   
   
 
-<meta name="theme-color" content="#ff3366">
+<meta name="theme-color" content="#000000">
 <link rel="manifest" href="manifest.json">
 <script src="sw-connect.js"></script>
 <meta name="apple-mobile-web-app-capable" content="yes">
