--- a/live.html
+++ b/live.html
@@ -41,7 +41,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
 </script>
 <!-- End MailerLite Universal -->
 
-<meta name="theme-color" content="#ff3366">
+<meta name="theme-color" content="#000000">
 <link rel="manifest" href="manifest.json">
 <script src="sw-connect.js"></script>
 <meta name="apple-mobile-web-app-capable" content="yes">
