create github pages

--- a/espacodofa.html
+++ b/espacodofa.html
@@ -193,7 +193,8 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Aplicativo da Lady Newton</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    Fizemos um APP para você, nele você acessa o site muito mais rápido e recebe notificações sobre os próximos shows e novidades da banda!<br><br><a href="#"></a></p><div class="onesignal-customlink-container"></div>
+                    Fizemos um APP para você, nele você acessa o site muito mais rápido e recebe notificações sobre os próximos shows e novidades da banda!<br>
+                </p><div class="onesignal-customlink-container"></div>
                 
             </div>
         </div>
