--- a/aplicativo.html
+++ b/aplicativo.html
@@ -159,7 +159,8 @@
                     <strong><a href="index.html" class="text-white"><b>Acessar o site</b></a>
                     <br><a href="blog.html" class="text-white"><b>Blog</b></a>
                     </strong><br><a href="espacodofa.html" class="text-white"><strong>Espaço do Fã</strong></a>
-                    <br><a href="espacodofa.html#custom-html-9e" class="text-white"><strong>Entrar na Lista de Emails</strong></a><br><strong><a href="#"></a></strong></p><div class="onesignal-customlink-container"></div><strong><a href="espacodofa.html#custom-html-9e" class="text-white"></a></strong>
+                    <br><a href="espacodofa.html#custom-html-9e" class="text-white"><strong>Entrar na Lista de Emails</strong></a><br><strong><a href="#"></a></strong></p>
+                <strong><a href="espacodofa.html#custom-html-9e" class="text-white"></a></strong>
                 <p>&nbsp;</p>
             </div>
             <div class="col-md-4 col-sm-12">
@@ -167,12 +168,13 @@
                 <p class="mbr-text mbr-fonts-style display-7">A gente se orgulha muito de usar a tecnologia para diminuir a distância entre a Lady Newton e os fãs. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br>Ative as notificações do app nesse botão para não perder nenhuma novidade da Lady!</p>
                 
             </div>
+            <div class="onesignal-customlink-container"></div>
             <div class="col-md-4 offset-md-1 col-sm-12">
                 <p class="mb-4 foot-title mbr-fonts-style display-2"><br>Pombo Correio</p>
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gOAiIHzpwoVAgf13n1m7QvTvFdbZYgsWVomzmGobvKhvHOT1Cj4uBoPOUodS9WtdqdP4rBdhQQLAycEMfir2L2VQn38VzYIEA+ETE0U5VG/ScIhVBgJ99cv+l4u0kKlU.EkO5HENuXeh0j726+utmT8QmAWLToQp3PJXZLwTuHuZvr8wizmASsp982KOfpJoxdhq3dxVU+lmgtk0/VP/RXLG4hZ8H4q1cpYU0X2I+jQyxfdc85hGqrCu6QY7M3g7X">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tyFZ2J8tHp9bTyNEsZO8sHvFuYZqJ+ZyFM2z15YHQOtotAoSc1MMlBlEZ3BroLG6MxxoPF5sc3Ksuu+kUxI35gJX4vqHkP+L9CfhIRn8ti8MoH81f3EcL6JqEsqQHrlo.BHfeeiFpzmn5Z6yFcP+erwD/5bKvpPrUdfMySK/tBOcATqYHC1VpFnjE1EtG1vB2Z+v7EwBKcDnV1dmryqHSZOCK2r6jWbPJGbDHiOAafMdc7kHHQVrqL98tNNxuKMjg">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo carinho!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
