--- a/aplicativo.html
+++ b/aplicativo.html
@@ -165,7 +165,7 @@
             </div>
             <div class="col-md-4 col-sm-12">
                 <p class="mb-4 foot-title mbr-fonts-style display-2"><br>Sobre o Aplicativo</p>
-                <p class="mbr-text mbr-fonts-style display-7">A gente se orgulha muito de usar a tecnologia para diminuir a distância entre a Lady Newton e os fãs. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br>Ative as notificações do app nesse botão para não perder nenhuma novidade da Lady!</p>
+                <p class="mbr-text mbr-fonts-style display-7">A gente se orgulha muito de usar a tecnologia para diminuir a distância entre a Lady Newton e os fãs.&nbsp;<br><br>Ative as notificações do app nesse botão para não perder nenhuma novidade da Lady!</p>
                 
             </div>
             <div class="onesignal-customlink-container"></div>
@@ -174,7 +174,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Jag5CJyF8ngKTAx6QmXd33GgTek1oN9LtKLjZ7UM7lpRxz1ulHDf0rDUZpTAb9DHJy9TwVknLBsOsEfk/sY8ci3ZWM5QEuNaXcVzxhyq+qpl/1d7hkgySSg2tgDeLkLq.QwoRoyz5MEj4vpfeZ+H4pD/mnsBL781YWnVH6Z0Gtf/anFkclB8CJ0oN3/ewJ0Wr37enWTbMmtJPv/yBfI9UnjOCF/FTtFV1480WFN050a5BWIZJZkJIfhA/wH773zN4">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GgDfrHMpavtQoLeKGfxi1b7HZ13eyIK+8t9sqS2sQPgqU2WJUxp2mSHKWUlXaqfaSeb19QTcLIyAZMsbTTo7YybImsfBgdEyFV7ad5/nfEY4MQZDFCREC6WCYdKzp0rI.GRVkPlg+CGh/Sa6fbYdC90J1m7RNwnYNXvht4gnY9Pa56JMOLPOe7RQaPobyMl43avv14dwx4cFDydeKlXhmAgRyoB9BkJVTMykSZh+6pInCXVFCPvG1dQit1OWspPRB">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo carinho!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
