create github pages

--- a/aplicativo.html
+++ b/aplicativo.html
@@ -68,7 +68,7 @@
 <!-- /Analytics -->
 
 
-  <section class="extHeader cid-s1ZSJMfeeQ mbr-fullscreen" id="extHeader2-b6">
+  <section class="extHeader cid-s1ZSJMfeeQ" id="extHeader2-b6">
 
     
 
@@ -132,7 +132,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Loja (EM BREVE)</h4>
+                            Loja<br>&nbsp;(em breve)</h4>
                         
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GgDfrHMpavtQoLeKGfxi1b7HZ13eyIK+8t9sqS2sQPgqU2WJUxp2mSHKWUlXaqfaSeb19QTcLIyAZMsbTTo7YybImsfBgdEyFV7ad5/nfEY4MQZDFCREC6WCYdKzp0rI.GRVkPlg+CGh/Sa6fbYdC90J1m7RNwnYNXvht4gnY9Pa56JMOLPOe7RQaPobyMl43avv14dwx4cFDydeKlXhmAgRyoB9BkJVTMykSZh+6pInCXVFCPvG1dQit1OWspPRB">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ExxHl0hQOoLP7BmLxze1KiLln0gFv1AMpQLXNgw/Wnv+p1kFcD6/y2qCh5eZ6zUqt+C1Sv6m3huxmrpvmXxdL7JvCOI4VcJtKHXxWU4jf1l6tdYzRRiW7wyqhfPMCtES.mrDkGS0qjPzeBn7eRDhUMSLNX3ibl+TZ3HFghu0b5aUDxhs7K3uyc6PB3KpUdClgY63g4OU2xf06IZ/XoL6oNNoD2BlKrN3Zqw/MK+9HQLFbhuAdEuUggUKHC0O3m7dO">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo carinho!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
