create github pages

--- a/aplicativo.html
+++ b/aplicativo.html
@@ -68,7 +68,7 @@
 <!-- /Analytics -->
 
 
-  <section class="extHeader cid-s1ZSJMfeeQ" id="extHeader2-b6">
+  <section class="extHeader cid-s1ZSJMfeeQ mbr-fullscreen mbr-parallax-background" id="extHeader2-b6">
 
     
 
@@ -79,7 +79,7 @@
         <div class="col-md-6">
             <div class="slider-text  slider-text-two">
               <h2 class="mbr-section-title mbr-fonts-style mbr-bold align-center display-1">Bem Vindo</h2>
-              <h4 class="mbr-text mbr-fonts-style align-center display-7">Ao aplicativo da Lady<br></h4><h4>
+              <h4 class="mbr-text mbr-fonts-style align-center display-7">Arraste para baixo!<br></h4><h4>
             </h4></div>
         </div>
       </div>
@@ -102,7 +102,7 @@
             <div class="card col-4 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/whatsapp-image-2020-06-12-at-15.58.30.jpeg" alt="" title="">
+                        <a href="https://tockify.com/agendalady/agenda" target="_blank"><img src="assets/images/whatsapp-image-2020-06-12-at-15.58.30.jpeg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -115,7 +115,7 @@
             <div class="card col-4 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/whatsapp-image-2020-06-12-at-16.02.26.jpeg" alt="" title="">
+                        <a href="https://soundcloud.com/lady_newton/tarde-demais-ao-vivo/s-ihGaM" target="_blank"><img src="assets/images/whatsapp-image-2020-06-12-at-16.02.26.jpeg" alt="" title=""></a>
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -128,7 +128,7 @@
             <div class="card col-4 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/whatsapp-image-2020-06-12-at-16.01.20.jpeg" alt="" title="">
+                        <a href="#bottom"><img src="assets/images/whatsapp-image-2020-06-12-at-16.01.20.jpeg" alt="" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -174,7 +174,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ExxHl0hQOoLP7BmLxze1KiLln0gFv1AMpQLXNgw/Wnv+p1kFcD6/y2qCh5eZ6zUqt+C1Sv6m3huxmrpvmXxdL7JvCOI4VcJtKHXxWU4jf1l6tdYzRRiW7wyqhfPMCtES.mrDkGS0qjPzeBn7eRDhUMSLNX3ibl+TZ3HFghu0b5aUDxhs7K3uyc6PB3KpUdClgY63g4OU2xf06IZ/XoL6oNNoD2BlKrN3Zqw/MK+9HQLFbhuAdEuUggUKHC0O3m7dO">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SfAaDC96F8bOndlV43+NbV3OKTSzZt68Nzr8b8c3vlfbnf9EjwgRLkqEWb2/71pqLgC94iAllQZwwFexXxKchbrdF1qT8gKLCL8lr7O+nt89gRRYPMkqqro/7qKIiKI5.Bms9Axum8WTVS+k0JSmTN9w452j/5Vt1XrXDWf4uHczWRvkpWe0tgYnANcL8/bqMYQzjkHJ5aDkVFAoIyqBh7+Wpj3LplDCUVg5rrIW+xwBeZ41ABQ+SH4C07sxc9Bo7">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo carinho!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -217,6 +217,7 @@
   <script src="assets/facebook-plugin/facebook-script.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
