--- a/loja.html
+++ b/loja.html
@@ -48,16 +48,16 @@
 <body>
 
 <!-- Analytics -->
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
+  <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-analytics.js"></script>
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
+  <!-- Add Firebase products that you want to use -->
+  <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-firestore.js"></script>
+
+    var firebaseConfig = {
     apiKey: "AIzaSyBL4WDOmvAu5ezMdspUoX8bh0Zq1y3EEV8",
     authDomain: "ladynewtonapp.firebaseapp.com",
     databaseURL: "https://ladynewtonapp.firebaseio.com",
@@ -70,8 +70,11 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
-</script>
+  </script>
 
+
+
+<!----  TUDO EM CIMA É FIREBASE -->
 <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 <script>
   var OneSignal = window.OneSignal || [];
@@ -202,7 +205,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="lb6hUIPQU7rYDRkuBS4gXtzBxGSEOvUpGDIfGyYthbBVnoP8cTBLRHutVjPtsofQzaA/WgLo6yY0e8oBBy5jLNwMOUmmQbNisxTU2CtBW8XmtrNHE3yyrnT6X3LaVyUp.L9jgRS6j/sq9Q1iroJY0ORpGweFPB8xL6UdGQyizKG7EproDuXE+HidS1+2wsfR1xQKdixGPlKQgeR9J2hipBmOlX+RI0p21Oq+5JMrmJTMjwafcdXY31UZAYUVr8qwC">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="U6bJRxqtVaCyd9jSaS7o2mnx1jitLvZj5xks/A+Xql4IkkqkEzgtRy5iZVa1+M3Nz4Hf114y3uTw1kO1TesekmXjqblf0jff7AZ0cF+5XmtTXV4XjsL6yzHoMTfmJ+7f.bjJQUzY0YEGqlBIdlvRaAs3JpXap1NB8dQ/QPgfppYbZaya+jkqfvkwvuZD393U7u+LMILUKiRF1Nr6biKZIyFqKbdUI0GY+fYgbP56NpWDd7Tuj/9sn75Hn0unVmuYX">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, iremos responder o mais rápido possível!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
