--- a/aplicativo.html
+++ b/aplicativo.html
@@ -28,20 +28,7 @@
   
   
 
-<meta name="theme-color" content="#000000">
-<link rel="manifest" href="manifest.json">
-<script src="sw-connect.js"></script>
-<meta name="apple-mobile-web-app-capable" content="yes">
-<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-640x1136.png">
-<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-750x1334.png">
-<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1242x2208.png">
-<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1125x2436.png">
-<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1536x2048.png">
-<link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1668x2224.png">
-<link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-title" content="Lady Newton">
-<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
+</head>
 <body>
 
 <!-- Analytics -->
@@ -84,7 +71,7 @@
         <div class="col-md-6">
             <div class="slider-text  slider-text-two">
               <h2 class="mbr-section-title mbr-fonts-style mbr-bold align-center display-1">Bem Vindo</h2>
-              <h4 class="mbr-text mbr-fonts-style align-center display-7">Versão 1.0 (beta)<br></h4><h4>
+              <h4 class="mbr-text mbr-fonts-style align-center display-7">Versão 1.0<br></h4><h4>
             </h4></div>
         </div>
       </div>
@@ -179,7 +166,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NVYpjylSXPYfJLN66BfKncU6jMLGruBxzszBNhpzw0nns1GeS+1Opi4jYlftPwwJVfkAcfRZ2rPjU+hVZ4kvluA593ycH2Thcj4W5D0I+o6IsvyX7M1G8MX9pGwkNNDb.bI8EIDkEhe70tRUWfN8bHQIcdFyPyM6FbV2714pPmw1qDqvNWKYs8fU4MyoXjIRqUY1bKN1kuwzCCNSpAU8WY7f6efD09MXKL7rVJlEZ8Uz5dv8Jfh3CX61iHNtt6gkG">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KqCBNGBYwhIWb5wqmXyI/Zsc2e9Wj1IMu/W3TJxm6HQXGxqfA7ndn5QYJjP2qUoLxLg99qZF2aKCYduU1J3dXW523mwVYW3dNnQ/w8R1nahS+fFvLQoFA6nMCbnwtbH3.twYKW5JHDLd3xfxGC2hj2wV7uL7hlb9gdWCUo02Zyn61WTrMIMQ2PljCfvI9L7QqyivIi6e1TUPLecN6uecHe9jtsSMoKdZEbfnuJjjW5XlVHAiHfN2zv8KAiKfrSA95">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo carinho!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
