--- a/epk.html
+++ b/epk.html
@@ -28,20 +28,7 @@
   
   
 
-<meta name="theme-color" content="#000000">
-<link rel="manifest" href="manifest.json">
-<script src="sw-connect.js"></script>
-<meta name="apple-mobile-web-app-capable" content="yes">
-<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-640x1136.png">
-<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-750x1334.png">
-<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1242x2208.png">
-<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1125x2436.png">
-<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1536x2048.png">
-<link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1668x2224.png">
-<link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-title" content="Lady Newton">
-<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
+</head>
 <body>
 
 <!-- Analytics -->
@@ -245,7 +232,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BenH43Em7EZJ3/SamCnmJGFP/aLII7pXay7FnfdkTdSeS0UcnpbfbNXuv0qFauvROcZ6r9fYgwruAcE0lY6YD/61Scn8gVTkyM8ypdZjalRhFQap9rD17A3vf6tWyqJv.4bNrL6is0RUZZAoyW33ou0N2Cez8JTx9iJT0XsrQwdosCygmptPJjr3wuvTGLNOBsPy3mbmLv/vtEI+KX3MfCI05xpFewAjBmxLSQIoDvsdLxV4rxfBiIbS1CUb105Rm">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OcJ/RgcU7DI+Yc3m9FrJizXkFUwP5jITM4fA1TtMPbeTaKJzTSmdGddSNlrABrY4HVkB3tHrAQ6NWbmciFy0fO21o66Dqv3D9devIWU04n8c1bal/uLHdWvd3x3lm6hk.GwP+pgrHUVQhfHEgjk4yxela1mkH9FIOzXfWwWs4kREKxFqg81pDBuW69J98R76K+y/RRgce8Ew1f3ca5GagWHLIDytcGafGxZ+obumPHg9y3c/TSxSiAqAsPP5E5tkT">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
