--- a/loja.html
+++ b/loja.html
@@ -31,20 +31,7 @@
   
   
 
-<meta name="theme-color" content="#000000">
-<link rel="manifest" href="manifest.json">
-<script src="sw-connect.js"></script>
-<meta name="apple-mobile-web-app-capable" content="yes">
-<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-640x1136.png">
-<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-750x1334.png">
-<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1242x2208.png">
-<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1125x2436.png">
-<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1536x2048.png">
-<link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1668x2224.png">
-<link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
-<meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-title" content="Lady Newton">
-<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
+</head>
 <body>
 
 <!-- Analytics -->
@@ -183,7 +170,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RpENBLtp8hFAtB3aNuSCke9O15ggiPi2I9uZmCxy6Z1v6pP7DQrcwFfWgSBxQH/Ykr07SVnKn3B37KNVCblWJOloD23EEQmISUjJUM/OqKLeagAv3BHqNOuSOSkbmqG1.Xy/yNqz2/TkfEVE4GcuO9ICcH+13/G3Yb+fSNkxpvL4L4t1U2DLtXs9P5UFsSaGoI5J7OFAXIXbj1lN/R4N2hzqOLAXvKjDw/tcsLrlONw0jhbM8EK25wTi3RE/8mN1I">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="6Mrk9zBSPgUrRlHFHtTfIzZFVzWnVtLRwz47JfqZNJqMarGku8uDzBacgRBrGeLhi38nlF0Y44Ne6/+4l/v3ZBlTG8R3IB1VPlX5Ypbz3U/UNjZTQQXFSmFWwbHWiZEI.QEauF+mwsl2dsvBQJddV6WE2Dlm5XrNc3LOj9JctLBpbX6SchS2P8lSAfWusI2zruJNQFJ1pz9c0MYXIzkjIZePPBqic5UOa3BFQN0Lo5ZfViOVMVcQ91P+bPcm7YyiV">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, iremos responder o mais rápido possível!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
