create github pages

--- a/aplicativo.html
+++ b/aplicativo.html
@@ -145,28 +145,26 @@
         <div class="media-container-row content mbr-white">
             <div class="col-md-3 col-sm-12">
 
-                <p class="mb-3 mbr-fonts-style foot-title display-2">
-                    <br>Lady Newton App</p>
+                <p class="mb-3 mbr-fonts-style foot-title display-2">Lady Newton App</p>
                 <p class="mbr-text mbr-fonts-style display-7">
                     <strong><a href="index.html" class="text-white"><b>Acessar o site</b></a>
                     <br><a href="blog.html" class="text-white"><b>Blog</b></a>
-                    </strong><br><a href="espacodofa.html" class="text-white"><strong>Espaço do Fã</strong></a>
-                    <br><a href="espacodofa.html#custom-html-9e" class="text-white"><strong>Entrar na Lista de Emails</strong></a><br><strong><a href="#"></a></strong></p>
+                    </strong><br><strong><a href="https://flappycreator.com/flappy.php?id=5e69156c8ebdf" class="text-white"><b>Jogar Flappy Newton</b></a></strong><br><a href="espacodofa.html#custom-html-9e" class="text-white"><strong>Entrar na Lista de Emails</strong></a><br><strong><a href="#"></a></strong></p>
                 <strong><a href="espacodofa.html#custom-html-9e" class="text-white"></a></strong>
                 <p>&nbsp;</p>
             </div>
             <div class="col-md-4 col-sm-12">
-                <p class="mb-4 foot-title mbr-fonts-style display-2"><br>Sobre o Aplicativo</p>
+                <p class="mb-4 foot-title mbr-fonts-style display-2">Sobre o Aplicativo</p>
                 <p class="mbr-text mbr-fonts-style display-7">A gente se orgulha muito de usar a tecnologia para diminuir a distância entre a Lady Newton e os fãs.&nbsp;<br><br>Ative as notificações do app nesse botão para não perder nenhuma novidade da Lady!</p>
-                
+                <div class="onesignal-customlink-container"></div>
             </div>
-            <div class="onesignal-customlink-container"></div>
+            
             <div class="col-md-4 offset-md-1 col-sm-12">
-                <p class="mb-4 foot-title mbr-fonts-style display-2"><br>Pombo Correio</p>
+                <p class="mb-4 foot-title mbr-fonts-style display-2">Pombo Correio</p>
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gtTrY+C/nzxzXbgY1HkCG+S/BfC5r76954f396cwHSa7PaNYr1CndY9hBJEFZkZoORR69LSwEczLrss4Bz5KeXoVmfvskNVJGtvV7OjSeCUBiRKFX7U1ZqyxQeumT2H4.U+btzlWmJKKHZlo9Afe+ash34H17WmTxcgiyLjjdYiNZRRFMNSMu+vpc3E31f5dMLjUS14XqSqQBw/bdsT/iR+MD8rG/+Vw4PX5OMsH8iZ63ItHXxQLrswlICq0GlI3o">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HhANp67YdWVqewjhkjvBuWYO/W3jZhCAJaWCbddTCNxsqbYwO3MLJPWqAX4PQhpectkVpLCUVCLJmX7k8Lf6Fnh9UC8Knzn6spyOJq+ZF/MNwdyzlQRKjsmVfrHTSl6s.wT4UnqMXnlN/eiJVe7BFLVDharux/ZxHHtPmLaC3mQec5iSS0R2Cx9sX1u0w0ZoO1vxF6QScTGdSc2fvBxbjRg9kp5GLUxOKEZRYnzqqxJm3fiIAss/lhrHBxE7tk3NE">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo carinho!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
