--- a/aplicativo.html
+++ b/aplicativo.html
@@ -64,13 +64,13 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(255, 51, 102);">
+    <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(255, 51, 102);">
     </div>
     <div class="container text-center" data-stellar-background-ratio=".5">
       <div class="row slider-wrapper justify-content-center">
-        <div class="col-md-6">
+        <div class="col-lg-4 col-md-6">
             <div class="slider-text  slider-text-two">
-              <h2 class="mbr-section-title mbr-fonts-style mbr-bold align-center display-1">Bem Vindo</h2>
+              <h2 class="mbr-section-title mbr-fonts-style mbr-bold align-center display-1">Lady App</h2>
               <h4 class="mbr-text mbr-fonts-style align-center display-7">Versão 1.0<br></h4><h4>
             </h4></div>
         </div>
@@ -164,7 +164,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OJPF5odjE+8vDZIcx/xHGgy8G+8mcCwKwrM4KfRMLJi0LQf33cDXa8twOhje80rfUJdhxHLQOaaKZhQSs5ckj0lAdnRHyGGJ3bRMFcVdeKba9TSEAQ/PXNA2uOJ+cWCf.BnnmyJXoH+qJpXa+RN00mak/JQ7TxXRWTxxBmrxr+fxz/O6pazJZQWQSrihFxKLUtO0OGZF7vOn2uX1GyojDwEGIVYmvO3HrZMR2V7O8VGNYeuWJzr0jLPkR+DU+NKmq">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xpeaRYjQC/4npIzl8iSbkTfcnr5W4yI4xZ3je2+a9Ux3wZzhBmLshBLKpp4IKKjplzd0pKKg9vnSxyaE4ULDHwh1D35m4OX2xv7cH4FhRreP6DyPvJu78Lw+J2ILoi9/.ws16pnWrZ0v3hqaKS6qixG/WfntLeco066HrzMWyVmv93RC+zTgg5mO1S5iYjjmD66KvO3y6lAE+ycZ8IPi6cZ5hV436grWK/Ydf/5PMNGAED85ITAZv+1qWmkdFuY+j">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo carinho!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
