create github pages

--- a/espacodofa.html
+++ b/espacodofa.html
@@ -274,7 +274,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                             Flappy Newton</h4>
                         <p class="mbr-text mbr-fonts-style display-7">Temos um jogo no modelo Flappy Bird! Use toda a sua habilidade para fazer com que Vitor desvie dos obstáculos!<br>Atualizado 10/03/2020 - Dia do Guitarrista!<br><br></p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://flappycreator.com/flappy.php?id=5e69156c8ebdf" class="btn btn-secondary-outline display-4" target="_blank"><span class="mbri-android mbr-iconfont mbr-iconfont-btn"></span>
+                    <div class="mbr-section-btn text-center"><a href="flappy.html" class="btn btn-secondary-outline display-4" target="_blank"><span class="mbri-android mbr-iconfont mbr-iconfont-btn"></span>
                             Flappy Newton</a></div>
                 </div>
             </div>
