create github pages

--- a/quizz.html
+++ b/quizz.html
@@ -109,13 +109,7 @@ O resultado é revelador! ">
     </nav>
 </section>
 
-<div id="custom-html-bu"><div class="container">
-  <h1>Quizz 1</h1>
-  <p>Descubra quem você é na Lady Newton!</p>
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://4screens.net/e/5ddc0eab5edc8b0100093489"></iframe>
-  </div>
-</div></div>
+<div id="custom-html-c2"><iframe name="myFrame" width="100%" height="800px" scrolling="no" frameborder="0" src="https://4screens.net/e/5ddc0eab5edc8b0100093489"></iframe></div>
 
 <section once="footers" class="cid-s5oQ5dTL1N" id="footer7-bv">
 
