create github pages

--- a/flappy.html
+++ b/flappy.html
@@ -108,13 +108,7 @@
     </nav>
 </section>
 
-<div id="custom-html-bs"><div class="container">
-  <h1>Flappy Newton</h1>
-  <p>Desvie das guitarras, o recorde atual é de 81 pontos pelo querido Italo!</p>
-  <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://flappycreator.com/flappy.php?id=5e69156c8ebdf"></iframe>
-  </div>
-</div></div>
+<div id="custom-html-bs"><iframe name="AppNewton" width="100%" height="800px" scrolling="no" frameborder="0" src="https://flappycreator.com/flappy.php?id=5e69156c8ebdf"></iframe></div>
 
 <section once="footers" class="cid-rPJyv7S1OG" id="footer7-br">
 
