create github pages

--- a/flappy.html
+++ b/flappy.html
@@ -120,7 +120,7 @@
             <div class="title col-12 align-center">
                 <h2 class="pb-3 mbr-regular mbr-fonts-style display-1">
                     Recorde atual: 81 pontos!</h2>
-                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-5">Conseguiu bater a pontuação de Italo? Manda mensagem com o print da tela!</h3>
+                <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-5">Conseguiu bater a pontuação de Ítalo? Manda mensagem com o print da tela!</h3>
             </div>
         </div>
     </div>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <div class="mbr-author-name mbr-semibold mbr-fonts-style display-5">Italo Montenegro</div>
+                        <div class="mbr-author-name mbr-semibold mbr-fonts-style display-5">Ítalo Montenegro</div>
                         <p class="mbr-author-desc pt-3 mbr-regular mbr-fonts-style display-4">
                             81 pontos</p>
 
